# emfcompliancev1

./: .gitignore  CMakeLists.txt  Claude.md
config/: config.yaml
data/limits/: fcc.yaml  icasa.yaml  icnirp_2020.yaml
include/: Antenna.h  Compliance.h  ConfigLoader.h  FieldSolver.h  Grid.h  OutputWriter.h  RadiationPattern.h  Types.h  Vector3.h
output/: report.json  results.csv
python/: app.py  data_loader.py  visualizer.py
src/: Antenna.cpp  Compliance.cpp  ConfigLoader.cpp  FieldSolver.cpp  Grid.cpp  OutputWriter.cpp  RadiationPattern.cpp  Vector3.cpp  main.cpp
